third_party/move/move-prover/tests/sources/functional/invariants.exp
Move prover returns: exiting with verification errors
error: data invariant does not hold
   ┌─ tests/sources/functional/invariants.move:15:9
   │
15 │         invariant greater_one(self.x);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/invariants.move:42: invalid_R_pack
   =     at tests/sources/functional/invariants.move:15

error: data invariant does not hold
   ┌─ tests/sources/functional/invariants.move:15:9
   │
15 │         invariant greater_one(self.x);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/invariants.move:113: lifetime_invalid_R
   =     at tests/sources/functional/invariants.move:15
   =     at tests/sources/functional/invariants.move:113: lifetime_invalid_R
   =         r = <redacted>
   =     at tests/sources/functional/invariants.move:114: lifetime_invalid_R
   =     at tests/sources/functional/invariants.move:115: lifetime_invalid_R
   =     at tests/sources/functional/invariants.move:116: lifetime_invalid_R
   =         x_ref = <redacted>
   =     at tests/sources/functional/invariants.move:15

error: data invariant does not hold
    ┌─ tests/sources/functional/invariants.move:150:9
    │
150 │         invariant y > 1;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:153: lifetime_invalid_S_branching
    =         cond = <redacted>
    =     at tests/sources/functional/invariants.move:154: lifetime_invalid_S_branching
    =     at tests/sources/functional/invariants.move:143
    =     at tests/sources/functional/invariants.move:154: lifetime_invalid_S_branching
    =         a = <redacted>
    =     at tests/sources/functional/invariants.move:155: lifetime_invalid_S_branching
    =     at tests/sources/functional/invariants.move:150
    =     at tests/sources/functional/invariants.move:155: lifetime_invalid_S_branching
    =         b = <redacted>
    =     at tests/sources/functional/invariants.move:156: lifetime_invalid_S_branching
    =         a_ref = <redacted>
    =     at tests/sources/functional/invariants.move:157: lifetime_invalid_S_branching
    =         b_ref = <redacted>
    =     at tests/sources/functional/invariants.move:158: lifetime_invalid_S_branching
    =         a = <redacted>
    =         x_ref = <redacted>
    =     at tests/sources/functional/invariants.move:160: lifetime_invalid_S_branching
    =     at tests/sources/functional/invariants.move:163: lifetime_invalid_S_branching
    =     at tests/sources/functional/invariants.move:150

error: data invariant does not hold
    ┌─ tests/sources/functional/invariants.move:174:9
    │
174 │         invariant self.self > 10;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:178: pack_struct_self
    =     at tests/sources/functional/invariants.move:174

error: data invariant does not hold
    ┌─ tests/sources/functional/invariants.move:186:9
    │
186 │         invariant self.x > 10;
    │         ^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/invariants.move:190: pack_struct_RR
    =     at tests/sources/functional/invariants.move:186
